Added some styling in ReputationView and MainView as well.
Renamed TestClass to ReputationModel and added couple properties.

Fixed a problem where "No data available. Please log in" text was not showing up when user is not logged in.

--- a/RepChecker/App.xaml
+++ b/RepChecker/App.xaml
@@ -10,11 +10,12 @@
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Theme/MenuButtonTheme.xaml" />
                 <ResourceDictionary Source="Theme/SubMenuButtonTheme.xaml" />
-                <ResourceDictionary Source="Theme/VerticalButtonsTheme.xaml" />
+                <!--<ResourceDictionary Source="Theme/VerticalButtonsTheme.xaml" />-->
                 <ResourceDictionary Source="Theme/CloseAppButtonTheme.xaml" />
                 <ResourceDictionary Source="Theme/MinimalizeButtonTheme.xaml" />
                 <ResourceDictionary Source="Theme/ScrollBarTheme.xaml"/>
-                
+                <ResourceDictionary Source="Theme/ProgressBarTheme.xaml"/>
+                <ResourceDictionary Source="Theme/ReputationViewTextBlockStyling.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <!--<DataTemplate DataType="{x:Type viewModel:ReputationViewModel}">
