--- a/RepChecker/MVVM/View/ReputationView.xaml
+++ b/RepChecker/MVVM/View/ReputationView.xaml
@@ -4,12 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:RepChecker.MVVM.View"
-             xmlns:viewModel="clr-namespace:RepChecker.MVVM.ViewModel"             
+             xmlns:viewModel="clr-namespace:RepChecker.MVVM.ViewModel"   
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" 
              Background="#15181e">
 
-    <!--<TextBlock Text="Jabadabadu" Foreground="CadetBlue"></TextBlock>-->
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
@@ -18,7 +17,7 @@
             <RowDefinition Height="25"/>
             <RowDefinition />
         </Grid.RowDefinitions>
-        
+
         <ScrollViewer Grid.Column="0" 
                       Grid.Row="1" 
                       VerticalScrollBarVisibility="Auto" 
@@ -26,7 +25,7 @@
                       Height="450"
                       VerticalAlignment="Top">
 
-            <StackPanel>
+            <!--<StackPanel>
                 <Grid x:Name="ReputationItem" Width="auto" Height="65">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto"/>
@@ -99,17 +98,15 @@
 
                         <TextBlock Text="Progress:" 
                                    Foreground="#ddcfb9" 
-                                   Margin="0 0 7 0"/>
+                                   Margin="0 0 7 0"
+                                   VerticalAlignment="Center"/>
 
                         <Grid>
-                            <ProgressBar Name="ReputationBar" Width="250"
+                            <ProgressBar Name="ReputationBar"
                                      Minimum="0" 
                                      Value="{Binding CurrentRepValue,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
                                      Maximum="{Binding MaxRepValue,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
-                                     Foreground="#57738f"
-                                     Background="#1c2936"
-                                     BorderBrush="Transparent"
-                                     BorderThickness="0" Height="16" VerticalAlignment="Top" />
+                                     Style="{StaticResource ProgressBarTheme}"/>
 
                             <Grid HorizontalAlignment="Center">
                                 <Grid.ColumnDefinitions>
@@ -130,8 +127,7 @@
                                                       Direction="330"
                                                       Color="Black"
                                                       Opacity="0.7"
-                                                      BlurRadius="1"
-                                                        />
+                                                      BlurRadius="1"/>
                                     </TextBlock.Effect>
                                     <TextBlock.FocusVisualStyle>
                                         <Style>
@@ -180,31 +176,214 @@
                     </StackPanel>
 
                 </Grid>
-                <!--<StackPanel Orientation="Horizontal" Height="100">
+                -->
+            <!--<StackPanel Orientation="Horizontal" Height="100">
+                    <TextBlock Text="Reputation:" 
+                           Foreground="#ddcfb9" />
+                    <TextBlock Text="Undercity" 
+                           Foreground="#ddcfb9" />
+                </StackPanel>-->
+            <!--
+
+            </StackPanel>-->
+            <ItemsControl ItemsSource="{Binding TestModels}" 
+                          AlternationCount="2"
+                          Margin="0 0 12 0">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel Width="auto">
+                            <StackPanel.Style>
+                                <Style TargetType="StackPanel">
+                                    <!--<Setter Property="Margin" Value="0 0 0 30" />-->
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding Path=(ItemsControl.AlternationIndex), 
+                                                     RelativeSource={RelativeSource AncestorType={x:Type ContentPresenter}}}" 
+                                                     Value="0">
+                                            <Setter Property="Background" Value="#161f29" />
+                                        </DataTrigger>
+                                        <DataTrigger Binding="{Binding Path=(ItemsControl.AlternationIndex), 
+                                                     RelativeSource={RelativeSource AncestorType={x:Type ContentPresenter}}}" 
+                                                     Value="1">
+                                            <Setter Property="Background" Value="#1d2936" />
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </StackPanel.Style>
+
+                            <Grid x:Name="ReputationItem" Width="auto" Height="70" 
+                                  Margin="0 0 0 0" VerticalAlignment="Center">
+                                <Grid.Style>
+                                    <Style TargetType="Grid">
+                                        <Style.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Background" Value="#27334d"/>
+                                            </Trigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Grid.Style>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="auto"/>
+                                    <ColumnDefinition Width="auto"/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="30" />
+                                    <RowDefinition Height="30" />
+                                </Grid.RowDefinitions>
+
+                                <StackPanel Grid.Row="0" Grid.Column="0" 
+                                            Orientation="Horizontal" 
+                                            HorizontalAlignment="Center"
+                                            VerticalAlignment="Center"
+                                            Margin="10 10 10 0">
+
+                                    <TextBlock Text="Reputation:" 
+                                               Margin="0 0 7 0"
+                                               Style="{StaticResource ReputationTextBlockStyle}"/>
+                                    <TextBlock Text="{Binding ReputationName}" 
+                                               Style="{StaticResource ReputationTextBlockStyle}"/>
+                                </StackPanel>
+
+                                <StackPanel Grid.Row="0" Grid.Column="1" 
+                                            Orientation="Horizontal" 
+                                            HorizontalAlignment="Center"
+                                            VerticalAlignment="Center"
+                                            Margin="10 10 10 0">
+
+                                    <TextBlock Text="Reputation level:" 
+                                               Margin="0 0 7 0"
+                                               Style="{StaticResource ReputationTextBlockStyle}"/>
+                                    <TextBlock Text="{Binding Standing.Level}" 
+                                               Style="{StaticResource ReputationTextBlockStyle}"/>
+                                </StackPanel>
+
+                                <StackPanel Grid.Row="0" Grid.Column="2" 
+                                            Orientation="Horizontal" 
+                                            HorizontalAlignment="Center"
+                                            VerticalAlignment="Center"
+                                            Margin="10 10 10 0">
+
+                                    <TextBlock Text="Realm:" 
+                                               Margin="0 0 7 0"
+                                               Style="{StaticResource ReputationTextBlockStyle}"/>
+                                    <TextBlock Text="{Binding Realm}" 
+                                               Style="{StaticResource ReputationTextBlockStyle}"/>
+                                </StackPanel>
+
+                                <StackPanel Grid.Row="0" Grid.Column="3" 
+                                            Orientation="Horizontal" 
+                                            HorizontalAlignment="Center"
+                                            VerticalAlignment="Center"
+                                            Margin="10 10 10 0">
+
+                                    <TextBlock Text="Character:" 
+                                               Margin="0 0 7 0"
+                                               Style="{StaticResource ReputationTextBlockStyle}"/>
+                                    <TextBlock Text="{Binding Character}" 
+                                               Style="{StaticResource ReputationTextBlockStyle}"/>
+                                </StackPanel>
+
+                                <StackPanel Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4"
+                                            Orientation="Horizontal" 
+                                            HorizontalAlignment="Left"
+                                            VerticalAlignment="Center"
+                                            Margin="10 0 10 0">
+
+                                    <TextBlock Text="Progress:" 
+                                               Margin="0 0 7 0"
+                                               VerticalAlignment="Center"
+                                               Style="{StaticResource ReputationTextBlockStyle}"/>
+
+                                    <Grid>
+                                        <ProgressBar Name="ReputationBar"
+                                                     Minimum="0" 
+                                                     Value="{Binding Standing.CurrentValue, Mode=OneWay,UpdateSourceTrigger=PropertyChanged}" 
+                                                     Maximum="{Binding Standing.Max ,Mode=OneWay,UpdateSourceTrigger=PropertyChanged}"
+                                                     Style="{StaticResource ProgressBarTheme}"/>
+
+                                        <Grid HorizontalAlignment="Center">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition />
+                                                <ColumnDefinition />
+                                            </Grid.ColumnDefinitions>
+                                            <TextBlock Text="{Binding ElementName=ReputationBar, Path=Value, Mode=OneWay, UpdateSourceTrigger=PropertyChanged, StringFormat={}{0:0}/}" 
+                                                       FontWeight="DemiBold"
+                                                       HorizontalAlignment="Center"
+                                                       Foreground="White"
+                                                       VerticalAlignment="Center" 
+                                                       Background="Transparent"
+                                                       Grid.Column="0">
+                                                <TextBlock.Effect>
+                                                    <DropShadowEffect ShadowDepth="1"
+                                                                      Direction="330"
+                                                                      Color="Black"
+                                                                      Opacity="0.7"
+                                                                      BlurRadius="1"/>
+                                                </TextBlock.Effect>
+                                                <TextBlock.FocusVisualStyle>
+                                                    <Style>
+                                                        <Setter Property="Control.Template">
+                                                            <Setter.Value>
+                                                                <ControlTemplate/>
+                                                            </Setter.Value>
+                                                        </Setter>
+                                                    </Style>
+                                                </TextBlock.FocusVisualStyle>
+                                            </TextBlock>
+                                            <TextBlock Text="{Binding ElementName=ReputationBar, Path=Maximum, Mode=OneWay,
+                                                       UpdateSourceTrigger=PropertyChanged, 
+                                                       StringFormat={}{0:0}}" 
+                                                       FontWeight="DemiBold"
+                                                       HorizontalAlignment="Center"
+                                                       Foreground="White"
+                                                       VerticalAlignment="Center" 
+                                                       Background="Transparent"
+                                                       Margin="0 0 0 0"
+                                                       Grid.Column="1">
+                                                <TextBlock.Effect>
+                                                    <DropShadowEffect ShadowDepth="1"
+                                                                      Direction="330"
+                                                                      Color="Black"
+                                                                      Opacity="0.7"
+                                                                      BlurRadius="1"
+                                                        />
+                                                </TextBlock.Effect>
+                                                <TextBlock.FocusVisualStyle>
+                                                    <Style>
+                                                        <Setter Property="Control.Template">
+                                                            <Setter.Value>
+                                                                <ControlTemplate/>
+                                                            </Setter.Value>
+                                                        </Setter>
+                                                    </Style>
+                                                </TextBlock.FocusVisualStyle>
+                                            </TextBlock>
+
+                                        </Grid>
+
+                                    </Grid>
+
+
+                                </StackPanel>
+
+                            </Grid>
+                            <!--<StackPanel Orientation="Horizontal" Height="100">
                     <TextBlock Text="Reputation:" 
                            Foreground="#ddcfb9" />
                     <TextBlock Text="Undercity" 
                            Foreground="#ddcfb9" />
                 </StackPanel>-->
 
-            </StackPanel>
-            <!--<ItemsControl ItemsSource="{Binding TestModels}">
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel>
-                            <TextBlock Text="{Binding Title}" 
-                                       Foreground="#ddcfb9" />
-
                         </StackPanel>
-
 
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
-            </ItemsControl>-->
+            </ItemsControl>
 
         </ScrollViewer>
     </Grid>
-    
+
 
 
 </UserControl>
