--- a/RepChecker/Theme/ProgressBarTheme.xaml
+++ b/RepChecker/Theme/ProgressBarTheme.xaml
@@ -1,7 +1,21 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <Style TargetType="{x:Type ProgressBar}"
+           x:Key="ProgressBarTheme">
+        <Style.Setters>
+            <Setter Property="Background" Value="#1c2936"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="BorderBrush" Value="Transparent" />
+            <Setter Property="Foreground" Value="#57738f" />
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="Width" Value="250" />
+            <Setter Property="Height" Value="20" />
 
+
+        </Style.Setters>
+
+    </Style>
 
 
 </ResourceDictionary>
