Minor changes and small adjustments.
Added DataCollector library project.

--- a/RepChecker/MainWindow.xaml
+++ b/RepChecker/MainWindow.xaml
@@ -257,7 +257,8 @@
                 <RadioButton Content="Settings"
                              Height="50"
                              FontSize="14"
-                             Style="{StaticResource MenuButtonTheme}"/>
+                             Style="{StaticResource MenuButtonTheme}"
+                             Command="{Binding DisplayTestPage}"/>
 
                 <RadioButton Content="About"
                              Height="50"
