--- a/RepChecker/MainWindow.xaml
+++ b/RepChecker/MainWindow.xaml
@@ -44,7 +44,7 @@
                         HorizontalAlignment="Right"
                         Margin="5,10,15,0">
 
-                <Button Margin="0,0,5,0"
+                <Button Margin="0,0,12,0"
                         Width="15" Height="15"
                         Style="{StaticResource MinimalizeButtonTheme}">
                 </Button>
@@ -74,7 +74,8 @@
                         Width="190"
                         Height="35"                     
                         Foreground="#fff" 
-                        FontSize="12">
+                        FontSize="12"
+                        Command="{Binding LogIn}">
 
                     <Button.Style>
                         <Style BasedOn="{StaticResource {x:Type Button}}"
@@ -129,7 +130,7 @@
                     
                 </Button>
 
-                <TextBlock Text="Hello Nickname!" 
+                <TextBlock Text="{Binding LoggedInUserName}" 
                            Foreground="#ddcfb9"
                            FontSize="16"
                            FontWeight="Regular"
@@ -202,56 +203,64 @@
                                  FontSize="14"
                                  Margin="0 0 0 0"
                                  Style="{StaticResource SubMenuButtonTheme}"
-                                 Command="{Binding ShowExaltedReputations}"/>
+                                 Command="{Binding ShowExaltedReputations}"
+                                 IsEnabled="{Binding RepButtonVisible}"/>
 
                     <RadioButton Content="Revered" 
                                  Height="30"
                                  FontSize="14"
                                  Margin="0 0 0 0"
                                  Style="{StaticResource SubMenuButtonTheme}"
-                                 Command="{Binding ShowReveredReputations}"/>
+                                 Command="{Binding ShowReveredReputations}"
+                                 IsEnabled="{Binding RepButtonVisible}"/>
 
                     <RadioButton Content="Honored" 
                                  Height="30"
                                  FontSize="14"
                                  Margin="0 0 0 0"
                                  Style="{StaticResource SubMenuButtonTheme}"
-                                 Command="{Binding ShowHonoredReputations}"/>
+                                 Command="{Binding ShowHonoredReputations}"
+                                 IsEnabled="{Binding RepButtonVisible}"/>
 
                     <RadioButton Content="Friendly" 
                                  Height="30"
                                  FontSize="14"
                                  Margin="0 0 0 0"
                                  Style="{StaticResource SubMenuButtonTheme}"
-                                 Command="{Binding ShowFriendlyReputations}"/>
+                                 Command="{Binding ShowFriendlyReputations}"
+                                 IsEnabled="{Binding RepButtonVisible}"/>
 
                     <RadioButton Content="Neutral" 
                                  Height="30"
                                  FontSize="14"
                                  Margin="0 0 0 0"
                                  Style="{StaticResource SubMenuButtonTheme}"
-                                 Command="{Binding ShowNeutralReputations}"/>
+                                 Command="{Binding ShowNeutralReputations}"
+                                 IsEnabled="{Binding RepButtonVisible}"/>
 
                     <RadioButton Content="Unfriendly"
                                  Height="30"
                                  FontSize="14"
                                  Margin="0 0 0 0"
                                  Style="{StaticResource SubMenuButtonTheme}"
-                                 Command="{Binding ShowUnfriendlyReputations}"/>
+                                 Command="{Binding ShowUnfriendlyReputations}"
+                                 IsEnabled="{Binding RepButtonVisible}"/>
 
                     <RadioButton Content="Hostile"
                                  Height="30"
                                  FontSize="14"
                                  Margin="0 0 0 0"
                                  Style="{StaticResource SubMenuButtonTheme}"
-                                 Command="{Binding ShowHostileReputations}"/>
+                                 Command="{Binding ShowHostileReputations}"
+                                 IsEnabled="{Binding RepButtonVisible}"/>
 
                     <RadioButton Content="Hated"
                                  Height="30"
                                  FontSize="14"
                                  Margin="0 0 0 0"
                                  Style="{StaticResource SubMenuButtonTheme}"
-                                 Command="{Binding ShowHatedReputations}"/>
+                                 Command="{Binding ShowHatedReputations}"
+                                 IsEnabled="{Binding RepButtonVisible}"/>
                 </StackPanel>
 
                 <RadioButton Content="Settings"
