--- a/RepChecker/MainWindow.xaml
+++ b/RepChecker/MainWindow.xaml
@@ -46,12 +46,14 @@
 
                 <Button Margin="0,0,12,0"
                         Width="15" Height="15"
-                        Style="{StaticResource MinimalizeButtonTheme}">
+                        Style="{StaticResource MinimalizeButtonTheme}"
+                        Command="{Binding MinimizeApp}">
                 </Button>
 
                 <Button
                         Width="15" Height="15"
-                        Style="{StaticResource CloseAppButtonTheme}">
+                        Style="{StaticResource CloseAppButtonTheme}"
+                        Command="{Binding CloseApp}">
                 </Button>
 
             </StackPanel>
