--- a/RepChecker/Theme/HorizontalButtonTheme.xaml
+++ b/RepChecker/Theme/HorizontalButtonTheme.xaml
@@ -1,9 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-
     <Style BasedOn="{StaticResource {x:Type Button}}"
            TargetType="{x:Type Button}"
-           x:Key="VerticalButtonsTheme">
+           x:Key="HorizontalButtonTheme">
         <Style.Setters>
             <Setter Property="Template">
                 <Setter.Value>
@@ -12,34 +11,25 @@
                               HorizontalAlignment="Stretch"
                               Background="{TemplateBinding Background}">
 
-                            <Image Source="pack://application:,,,/Theme/Assets/1.png" 
-                                   HorizontalAlignment="Left"
-                                   VerticalAlignment="Center"
-                                   Margin="15 3 15 0"
-                                   Width="35" Height="25"/>
                             <TextBlock Text="{TemplateBinding Property=Content}"
                                        VerticalAlignment="Center"
-                                       HorizontalAlignment="Right"
-                                       Margin="15,0,15,0"
-                                       FontWeight="DemiBold"/>
+                                       Margin="0,0,0,0"/>
 
                         </Grid>
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-            <Setter Property="Background" Value="#03264a"/>
+            <Setter Property="Background" Value="Transparent"/>
             <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Cursor" Value="Hand"/>
+            <Setter Property="Cursor" Value="Hand" />
+            <Setter Property="Foreground" Value="#ddcfb9" />
+
+
         </Style.Setters>
 
         <Style.Triggers>
-
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#2C4561" />
-            </Trigger>
-
-            <Trigger Property="IsPressed" Value="True">
-                <Setter Property="Background" Value="#486B92" />
+                <Setter Property="Foreground" Value="#f7e6cb" />
             </Trigger>
         </Style.Triggers>
     </Style>
