Added SettingsViewModel and corresponding view. Implementing slowly user app settings.

--- a/RepChecker/App.xaml
+++ b/RepChecker/App.xaml
@@ -17,6 +17,7 @@
                 <ResourceDictionary Source="Theme/ProgressBarTheme.xaml"/>
                 <ResourceDictionary Source="Theme/ReputationViewTextBlockStyling.xaml"/>
                 <ResourceDictionary Source="Theme/HorizontalLabelTheme.xaml"/>
+                <ResourceDictionary Source="Theme/ComboBoxTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
 
             <!--<DataTemplate DataType="{x:Type viewModel:ReputationViewModel}">
