--- a/RepChecker/MVVM/View/ReputationView.xaml
+++ b/RepChecker/MVVM/View/ReputationView.xaml
@@ -5,9 +5,10 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:RepChecker.MVVM.View"
              xmlns:viewModel="clr-namespace:RepChecker.MVVM.ViewModel"   
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" 
-             Background="#15181e">
+             mc:Ignorable="d"
+             VerticalAlignment="Stretch"
+             Background="#15181e"
+             d:DesignHeight="450" d:DesignWidth="800">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -18,23 +19,51 @@
             <RowDefinition />
         </Grid.RowDefinitions>
 
-        <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <Label Content="Sort:"
-                   Style="{StaticResource HorizontalLabelTheme}"/>
-            <Button Content="A-Z"
-                    Height="20"
-                    FontSize="10"
-                    Style="{StaticResource HorizontalButtonTheme}"
-                    Command="{Binding SortInAlphabeticalOrder}"/>
-            <Label Content="|" Margin="0 0 0 1"
-                   Style="{StaticResource HorizontalLabelTheme}"/>
-            <Button Content="Z-A"
-                    Height="20"
-                    FontSize="10"
-                    Margin="0 0 0 0"
-                    Style="{StaticResource HorizontalButtonTheme}"
-                    Command="{Binding SortInReverseAlphabeticalOrder}"/>
-        </StackPanel>
+        <DockPanel Grid.Row="0" HorizontalAlignment="Stretch">
+
+
+                <Label Content="Sort:" 
+                       Grid.Column="0"
+                       Style="{StaticResource HorizontalLabelTheme}"
+                       Margin="0 0 0 0"/>
+            
+                <Button Content="A-Z"
+                        Height="20"
+                        FontSize="10"
+                        Grid.Column="1"
+                        Margin="0 0 0 0"
+                        Style="{StaticResource HorizontalButtonTheme}"
+                        Command="{Binding SortInAlphabeticalOrder}"/>
+            
+                <Label Content="|" Margin="0 0 0 1"
+                       Grid.Column="2"
+                       Style="{StaticResource HorizontalLabelTheme}"/>
+            
+                <Button Content="Z-A"
+                        Height="20"
+                        FontSize="10"
+                        Margin="0 0 0 0"
+                        Grid.Column="3"
+                        Style="{StaticResource HorizontalButtonTheme}"
+                        Command="{Binding SortInReverseAlphabeticalOrder}"/>
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                <Label Content="Reputations:" 
+                       Margin="0 0 0 1"
+                       HorizontalAlignment="Right"
+                       Style="{StaticResource HorizontalLabelTheme}"/>
+
+                <Label Content="{Binding ReputationsNumber}" 
+                       Margin="0 0 0 1"
+                       Style="{StaticResource HorizontalLabelTheme}"
+                       ToolTipService.InitialShowDelay="1000"
+                       ToolTipService.ShowDuration="5000"
+                       ToolTipService.BetweenShowDelay="5000"
+                       ToolTip="Number of unique reputations"/>
+            </StackPanel>
+
+
+        </DockPanel>
 
         <Grid Grid.Row="1" Grid.Column="0">
             <Grid.ColumnDefinitions>
@@ -45,7 +74,7 @@
                 <RowDefinition Height="80" />
                 <RowDefinition />
             </Grid.RowDefinitions>
-            
+
             <Viewbox Height="75" Width="75" VerticalAlignment="Center"
                      Grid.Column="0" Grid.Row="1">
                 <Viewbox.LayoutTransform>
@@ -107,12 +136,14 @@
                       Grid.Row="1" 
                       VerticalScrollBarVisibility="Auto" 
                       Width="auto" 
-                      Height="450"
-                      VerticalAlignment="Top">
+                      MinHeight="450"
+                      VerticalAlignment="Top"
+                      Margin="0 0 0 12">
 
             <ItemsControl ItemsSource="{Binding TestModels}" 
                           AlternationCount="2"
-                          Margin="0 0 12 0">
+                          Margin="0 0 12 0"
+                          VerticalAlignment="Stretch">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Width="auto">
