--- a/RepChecker/MVVM/View/ReputationView.xaml
+++ b/RepChecker/MVVM/View/ReputationView.xaml
@@ -15,39 +15,47 @@
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="25"/>
+            <RowDefinition Height="45"/>
             <RowDefinition />
         </Grid.RowDefinitions>
 
         <DockPanel Grid.Row="0" HorizontalAlignment="Stretch">
 
+            <Label Content="Sort:" 
+                   Grid.Column="0"
+                   Style="{StaticResource HorizontalLabelTheme}"
+                   Margin="0 0 0 0"/>
 
-                <Label Content="Sort:" 
-                       Grid.Column="0"
-                       Style="{StaticResource HorizontalLabelTheme}"
-                       Margin="0 0 0 0"/>
-            
-                <Button Content="A-Z"
-                        Height="20"
-                        FontSize="10"
-                        Grid.Column="1"
-                        Margin="0 0 0 0"
-                        Style="{StaticResource HorizontalButtonTheme}"
-                        Command="{Binding SortInAlphabeticalOrder}"/>
-            
-                <Label Content="|" Margin="0 0 0 1"
-                       Grid.Column="2"
-                       Style="{StaticResource HorizontalLabelTheme}"/>
-            
-                <Button Content="Z-A"
-                        Height="20"
-                        FontSize="10"
-                        Margin="0 0 0 0"
-                        Grid.Column="3"
-                        Style="{StaticResource HorizontalButtonTheme}"
-                        Command="{Binding SortInReverseAlphabeticalOrder}"/>
+            <Button Content="A-Z"
+                    Height="20"
+                    FontSize="10"
+                    Grid.Column="1"
+                    Margin="0 0 0 0"
+                    Style="{StaticResource HorizontalButtonTheme}"
+                    Command="{Binding SortInAlphabeticalOrder}"/>
+
+            <Label Content="|" Margin="0 0 0 1"
+                   Grid.Column="2"
+                   Style="{StaticResource HorizontalLabelTheme}"/>
+
+            <Button Content="Z-A"
+                    Height="20"
+                    FontSize="10"
+                    Margin="0 0 0 0"
+                    Grid.Column="3"
+                    Style="{StaticResource HorizontalButtonTheme}"
+                    Command="{Binding SortInReverseAlphabeticalOrder}"/>
+
+
 
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+
+                <TextBox x:Name="Search" Foreground="#ddcfb9" Width="130"
+                         Height="30" 
+                         Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                         Style="{StaticResource TextBoxBaseStyle}"
+                         Cursor="IBeam" CaretIndex="0" CaretBrush="#ddcfb9"/>
+
                 <Label Content="Reputations:" 
                        Margin="0 0 0 1"
                        HorizontalAlignment="Right"
@@ -60,6 +68,7 @@
                        ToolTipService.ShowDuration="5000"
                        ToolTipService.BetweenShowDelay="5000"
                        ToolTip="Number of unique reputations"/>
+
             </StackPanel>
 
 
