Logging off now possible, but there is still a lot to do.

--- a/RepChecker/MainWindow.xaml
+++ b/RepChecker/MainWindow.xaml
@@ -176,7 +176,8 @@
                                              FontSize="14"
                                              x:Name="ReputationsButton"
                                              Style="{StaticResource MenuButtonTheme}"
-                                             Command="{Binding DisplayReputationPage}">
+                                             Command="{Binding DisplayReputationPage}"
+                                             IsChecked="{Binding IsReputationsDropDownVisible}">
                     <RadioButton.Triggers>
 
 
